// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Description/ConditionalDescription Conditional Description 1`] = `
<dl
  className="description-list"
>
  <dt
    className="description-single-item"
  >
    A label
  </dt>
  <dd
    className="description-single-item"
  >
    a value
  </dd>
</dl>
`;

exports[`Storyshots Description/ConditionalDescription With A Date 1`] = `
<dl
  className="description-list"
>
  <dt
    className="description-single-item"
  >
    A Date
  </dt>
  <dd
    className="description-single-item"
  >
    <time
      dateTime={"2020-01-01T00:00:00.000Z"}
      title="2020-01-01T00:00:00+00:00"
    >
      January 1, 2020
    </time>
  </dd>
</dl>
`;

exports[`Storyshots Description/ConditionalDescription With False Condition 1`] = `null`;

exports[`Storyshots Description/ConditionalDescription With Falsy Condition 1`] = `null`;

exports[`Storyshots Description/ConditionalDescription With Falsy Nested Value 1`] = `null`;

exports[`Storyshots Description/ConditionalDescription With Falsy Nested Value And Condition 1`] = `null`;

exports[`Storyshots Description/ConditionalDescription With Falsy Value 1`] = `null`;

exports[`Storyshots Description/ConditionalDescription With Not A Date 1`] = `null`;

exports[`Storyshots Description/ConditionalDescription With Not A Time 1`] = `null`;

exports[`Storyshots Description/ConditionalDescription With True Condition 1`] = `
<dl
  className="description-list"
>
  <dt
    className="description-single-item"
  >
    A label
  </dt>
  <dd
    className="description-single-item"
  >
    A value
  </dd>
</dl>
`;

exports[`Storyshots Description/ConditionalDescription Without Value 1`] = `null`;
